--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div arie-hidden="true" class="header__lamp"></div>
+      <div aria-hidden="true" class="header__lamp"></div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
