--- a/index.html
+++ b/index.html
@@ -52,11 +52,8 @@
       </p>
     </header>
     <main class="main">
-      <section class="content__section section__1st">
-        <h2 class="section__title">
-          Почему сосредоточиться так <br />
-          сложно
-        </h2>
+      <section class="content__section section__why">
+        <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <article class="article">
           <h3 class="article__title title-decor">Многозадачность</h3>
           <p class="article__text">
@@ -90,8 +87,8 @@
           </p>
         </article>
       </section>
-      <section class="content__section section__2nd">
-        <h2 class="section__title section__2nd-title">
+      <section class="content__section section__causes">
+        <h2 class="section__title section__causes-title">
           Что снижает концентрацию внимания?
         </h2>
         <article>
@@ -129,7 +126,7 @@
           </p>
         </article>
       </section>
-      <section class="content__section section__3rd">
+      <section class="content__section section__tips">
         <h2 class="section__title-tips">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -138,7 +135,7 @@
           <h3 class="article__title-tips title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
-          <h3 class="article__title title-decor">Представьте небо и облака</h3>
+          <h4 class="article__title no-bold title-decor">Представьте небо и облака</h4>
           <p class="article__text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
             успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -151,7 +148,7 @@
           </p>
         </article>
         <article class="article">
-          <h3 class="article__title title-decor">Включите музыку</h3>
+          <h4 class="article__title no-bold title-decor">Включите музыку</h4>
           <p class="article__text">
             Но не любую, и не любимую. Любимая может быть связана с сильными
             положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -160,7 +157,7 @@
           </p>
         </article>
         <article class="article">
-          <h3 class="article__title title-decor">Прогуляйтесь</h3>
+          <h4 class="article__title no-bold title-decor">Прогуляйтесь</h4>
           <p class="article__text">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
             <a
@@ -176,7 +173,7 @@
           </p>
         </article>
         <article class="article">
-          <h3 class="article__title title-decor">Хорошо ешьте</h3>
+          <h4 class="article__title no-bold title-decor">Хорошо ешьте</h4>
           <p class="article__text">
             Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
             которые препятствуют резким скачкам сахара в крови. Например, с
@@ -185,7 +182,7 @@
           </p>
         </article>
         <article class="article">
-          <h3 class="article__title title-decor">Читайте</h3>
+          <h4 class="article__title no-bold title-decor">Читайте</h4>
           <p class="article__text">
             Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
             прочитать пост в соцсети, достаточно нескольких минут или даже
