--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     </header>
     <main class="main">
       <section class="content__section section__why">
-        <h2 class="section__title">Почему сосредоточиться так сложно</h2>
+        <h2 class="section__title section__title-why">
+          Почему сосредоточиться так сложно
+        </h2>
         <article class="article">
           <h3 class="article__title title-decor">Многозадачность</h3>
           <p class="article__text">
@@ -91,7 +93,7 @@
         <h2 class="section__title section__causes-title">
           Что снижает концентрацию внимания?
         </h2>
-        <article>
+        <article class="article">
           <h3 class="article__title title-decor">Многозадачность</h3>
           <p class="article__text">
             Как концентрация может снижаться из-за… концентрации? Любая
@@ -102,7 +104,7 @@
             не давать ей отдохнуть.
           </p>
         </article>
-        <article>
+        <article class="article">
           <h3 class="article__title title-decor">Еда</h3>
           <p class="article__text">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -113,7 +115,7 @@
             больше быстрых углеводов.
           </p>
         </article>
-        <article>
+        <article class="article">
           <h3 class="article__title title-decor">Гаджеты</h3>
           <p class="article__text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -127,7 +129,7 @@
         </article>
       </section>
       <section class="content__section section__tips">
-        <h2 class="section__title-tips">
+        <h2 class="section__title section__title-tips">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
@@ -135,17 +137,21 @@
           <h3 class="article__title-tips title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
-          <h4 class="article__title no-bold title-decor">Представьте небо и облака</h4>
-          <p class="article__text">
-            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-            успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
-            раз и мешают эти сложные задачи делать. В такие моменты можно
-            закрыть глаза и представить, что чистое небо — это вы, а облака —
-            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
-            где-то там, за тучами, и никуда не денется. Это упражнение поможет
-            вернуться в настоящий момент, а не волноваться о потенциальных
-            проблемах из будущего.
-          </p>
+          <div class="article__tips">
+            <h4 class="article__title no-bold title-decor">
+              Представьте небо и облака
+            </h4>
+            <p class="article__text">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
+            </p>
+          </div>
         </article>
         <article class="article">
           <h4 class="article__title no-bold title-decor">Включите музыку</h4>
@@ -192,43 +198,39 @@
         </article>
       </section>
       <section class="content__section-galery">
-        <article class="article">
-          <h3 class="article__title title-decor no-margin">
-            А можно в картинках?
-          </h3>
-          <div class="gallery">
-            <img
-              src="./images/sunset.png"
-              alt="Рассвет"
-              class="gallery__image image__sunset"
-              loading="lazy"
-            />
-            <img
-              src="./images/ice-cream.png"
-              alt="Мороженое"
-              class="gallery__image image__ice-cream"
-              loading="lazy"
-            />
-            <img
-              src="./images/tape.png"
-              alt="Музыкальная кассета"
-              class="gallery__image image__tape"
-              loading="lazy"
-            />
-            <img
-              src="./images/books.png"
-              alt="Книжки"
-              class="gallery__image image__books"
-              loading="lazy"
-            />
-            <img
-              src="./images/street.png"
-              alt="Улица"
-              class="gallery__image image__street"
-              loading="lazy"
-            />
-          </div>
-        </article>
+        <h3 class="section__title title-decor">А можно в картинках?</h3>
+        <div class="gallery">
+          <img
+            src="./images/sunset.png"
+            alt="Рассвет"
+            class="gallery__image image__sunset"
+            loading="lazy"
+          />
+          <img
+            src="./images/ice-cream.png"
+            alt="Мороженое"
+            class="gallery__image image__ice-cream"
+            loading="lazy"
+          />
+          <img
+            src="./images/tape.png"
+            alt="Музыкальная кассета"
+            class="gallery__image image__tape"
+            loading="lazy"
+          />
+          <img
+            src="./images/books.png"
+            alt="Книжки"
+            class="gallery__image image__books"
+            loading="lazy"
+          />
+          <img
+            src="./images/street.png"
+            alt="Улица"
+            class="gallery__image image__street"
+            loading="lazy"
+          />
+        </div>
       </section>
     </main>
     <footer class="footer decorated-zone">
