--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             5 простых (на самом деле не очень) советов
           </h3>
           <div class="article__tips">
-            <h4 class="article__title no-bold title-decor">
+            <h4 class="article__title no-bold no-margin title-decor">
               Представьте небо и облака
             </h4>
             <p class="article__text">
